tests/lox/errors/resolution_errors.lox
return;
// err: One or more errors occurred during resolving variables:
// err: [at column 1 in line 1] Cannot return from top-level code.